--- a/style.css
+++ b/style.css
@@ -1,1 +1,236 @@
+body {
+    background:lightblue;
+    background-image: url('image/scale.png');
+    background-size:100%;
+    padding:60px;
+    text-align:center;
+    
+  }
+  
+  main {
+   
+    margin:auto;
+    border:solid 12px ;
+    border-image: url('image/superwidegraintextured.jpg') 30 stretch;
+   background:rgb(235, 183, 104);
+    width:60%;
+    height:730px;
+  
+  }
 
+  #actualmain {
+ border-radius:6px 100px 0px 100px;
+border:ridge 6px white;
+ background:#fff8a3;
+ height:690px;
+ padding:15px;
+  }
+
+
+p {
+font-size:20px;
+font-family:'simple';
+padding:15px;
+padding-top:0px;
+}
+  h1 {
+    margin-left:110px;
+    font-family: "spunch";
+    background-color: #89c13f;
+    background-image: linear-gradient(45deg, #89c13f, #00b5da);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-text-fill-color: transparent;
+    margin-top:13px;
+    padding-left: 25px;
+    font-size:2.5em;
+  }
+  #header {
+    text-align:left;
+    width:97%;
+    border-radius:6px 100px 0px 100px;
+    margin-top:10px;
+    height:70px;
+    background:#fefef5;
+    border:ridge black 2px;
+    margin-bottom:10px;
+    padding-top:0;
+  }
+  
+  
+  #logo {
+    width:200px;
+    margin-left:-70px;
+    margin-top:-70px;
+    position:absolute;
+  }
+
+#content {
+  
+  width:95%;
+  border:ridge black 2px;
+padding:10px;
+background:#fefef5;
+height:560px;
+border-radius:6px 0px 0px 100px;
+overflow:auto;
+}
+
+  h2 {
+    font-family: "spunch";
+    text-decoration-line: underline;
+    color: #255f8f;
+  }
+
+  section{
+    display:flex;
+    justify-content: center;
+    gap: 50px;
+    padding-left:108px;
+  }
+  
+
+
+
+
+
+
+
+
+
+
+        
+
+
+#musicplayer{ 
+font-family: 'pixel';
+font-weight:bold;
+height:30px;
+width:100%;
+
+position:fixed;
+margin-bottom:20px;
+margin-right:305px;
+top:0;
+display:flex;
+
+background-image: url('image/superwidegraintextured.jpg') ; 
+border:solid 2px white;/* border around player */
+outline: solid 2px black;  
+border-radius:5px 0px 0px 50px;
+
+}
+
+.songtitle{ 
+display:block;
+padding:2px; 
+font-family: 'chunkpixel';
+margin-top:4px;
+margin-right: 5px; 
+font-size:15px;
+color:#255f8f;
+letter-spacing: 1px; 
+width:200px;
+background: #fff8a3;/* background of song title */
+border: gray inset 1px;
+border-radius:6px;
+}
+
+.controls{
+font-size:12px; /* size of controls */
+text-align:center;
+width:100px;
+height:20px;
+  margin-right: 10px; 
+
+}
+
+.controls td{
+padding-top:5px; /* padding around controls */
+}
+
+.seeking{
+width:45%;
+background: transparent;/* background color of seeking bar */
+display:flex;
+justify-content: space-evenly;
+padding:7px; /* padding around seeking bar */
+
+}
+
+.current-time{  
+padding-right:5px;
+margin-right: 3px; 
+
+}
+
+.total-duration{
+padding-left:5px;
+}
+
+i.fas:hover{
+cursor:help;
+}
+
+i.fas.fa-pause, i.fas.fa-play, i.fas.fa-forward, i.fas.fa-backward{
+color:white; /* color of controls */
+
+
+}
+
+input[type=range] {
+-webkit-appearance: none;
+width: 100%;
+background: transparent;
+}
+
+input[type=range]:focus {
+outline: none;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+width: 70%;
+height: 6px; /* thickness of seeking track */
+cursor: help;
+border-radius: 6px;
+background: white; /* color of seeking track */
+
+}
+
+input[type=range]::-webkit-slider-thumb {
+
+height: 30px; /* height of seeking square */
+width: 32px; /* width of seeking square */
+background-image:  url(''); /* image of  seeking square */
+background-repeat:no-repeat;
+  transform: scaleX(-1);
+filter: drop-shadow(1px 0 0 white) drop-shadow(0 1px 0 white) drop-shadow(-1px 0 0 white) drop-shadow(0 -1px 0 white)  drop-shadow(-0.5px 0.5px 0 black) drop-shadow(0 0.5px 0 black) drop-shadow(0 0.5px 0 black) drop-shadow(0 0.5px 0.5px black) drop-shadow(0 0.5px black) drop-shadow(0.5px 0.5px 0 black) drop-shadow(0.5px 0.5px 0 black);
+
+background-size: 28px;
+-webkit-appearance: none;
+margin-top: -10px;
+
+}
+
+input[type=range].volume_slider::-webkit-slider-runnable-track { 
+background: #e6f2ab; /* color of volume seeking track */
+filter:drop-shadow(-0.5px 0.5px 0 black) drop-shadow(0 0.5px 0 black) drop-shadow(0 0.5px 0 black) drop-shadow(0 0.5px 0.5px black) drop-shadow(0 0.5px black) drop-shadow(0.5px 0.5px 0 black) drop-shadow(0.5px 0.5px 0 black);  /* outline of volume seeking track */ 
+}
+
+input[type=range].volume_slider::-webkit-slider-thumb {
+background-image: url(https://yokai.crd.co/assets/images/gallery29/02fd5db2.png?v=b4df531c);/* image of volume seeking square */
+background-size: 20px;
+height: 20px; /* height of volume seeking square */
+width: 20px; 
+margin-top: -8px;
+}
+
+
+.slider_container {  
+width: 15%;       /* width of volume seeker */
+display: flex;
+justify-content: center;
+align-items: center;
+}  
