--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   main {
    
     margin:auto;
+    margin-top:20px;
     border:solid 12px ;
     border-image: url('image/superwidegraintextured.jpg') 30 stretch;
    background:rgb(235, 183, 104);
@@ -32,9 +33,10 @@ font-size:20px;
 font-family:'simple';
 padding:15px;
 padding-top:0px;
+
 }
   h1 {
-    margin-left:110px;
+    margin-left:210px;
     font-family: "spunch";
     background-color: #89c13f;
     background-image: linear-gradient(45deg, #89c13f, #00b5da);
@@ -43,13 +45,13 @@ padding-top:0px;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent; 
     -moz-text-fill-color: transparent;
-    margin-top:13px;
+    margin-top:16px;
     padding-left: 25px;
     font-size:2.5em;
   }
   #header {
     text-align:left;
-    width:97%;
+    width:99%;
     border-radius:6px 100px 0px 100px;
     margin-top:10px;
     height:70px;
@@ -69,7 +71,7 @@ padding-top:0px;
 
 #content {
   
-  width:95%;
+  width:97%;
   border:ridge black 2px;
 padding:10px;
 background:#fefef5;
@@ -82,15 +84,24 @@ overflow:auto;
     font-family: "spunch";
     text-decoration-line: underline;
     color: #255f8f;
+    
   }
 
   section{
     display:flex;
-    justify-content: center;
-    gap: 50px;
-    padding-left:108px;
+    justify-content: space-evenly;
+    
+    padding-left:;
   }
-  
+  span {
+
+   background: #b3eaf5;
+    
+  }
+
+  #border {
+  width: 10px;
+  }
 
 
 
@@ -105,34 +116,34 @@ overflow:auto;
 
 
 #musicplayer{ 
-font-family: 'pixel';
+font-family: 'spunch';
 font-weight:bold;
 height:30px;
 width:100%;
-
+z-index:100;
 position:fixed;
 margin-bottom:20px;
-margin-right:305px;
 top:0;
+left:0;
 display:flex;
 
 background-image: url('image/superwidegraintextured.jpg') ; 
 border:solid 2px white;/* border around player */
 outline: solid 2px black;  
-border-radius:5px 0px 0px 50px;
+
 
 }
 
 .songtitle{ 
 display:block;
 padding:2px; 
-font-family: 'chunkpixel';
+font-family: 'spunch';
 margin-top:4px;
 margin-right: 5px; 
 font-size:15px;
 color:#255f8f;
 letter-spacing: 1px; 
-width:200px;
+width:250px;
 background: #fff8a3;/* background of song title */
 border: gray inset 1px;
 border-radius:6px;
@@ -152,7 +163,7 @@ padding-top:5px; /* padding around controls */
 }
 
 .seeking{
-width:45%;
+width:57%;
 background: transparent;/* background color of seeking bar */
 display:flex;
 justify-content: space-evenly;
@@ -201,35 +212,32 @@ background: white; /* color of seeking track */
 
 input[type=range]::-webkit-slider-thumb {
 
-height: 30px; /* height of seeking square */
-width: 32px; /* width of seeking square */
-background-image:  url(''); /* image of  seeking square */
-background-repeat:no-repeat;
-  transform: scaleX(-1);
-filter: drop-shadow(1px 0 0 white) drop-shadow(0 1px 0 white) drop-shadow(-1px 0 0 white) drop-shadow(0 -1px 0 white)  drop-shadow(-0.5px 0.5px 0 black) drop-shadow(0 0.5px 0 black) drop-shadow(0 0.5px 0 black) drop-shadow(0 0.5px 0.5px black) drop-shadow(0 0.5px black) drop-shadow(0.5px 0.5px 0 black) drop-shadow(0.5px 0.5px 0 black);
+height: 20px; /* height of seeking square */
+width: 12px; /* width of seeking square */
+background: #255f8f; /* image of  seeking square */
 
-background-size: 28px;
+
+background-size: 10px;
 -webkit-appearance: none;
-margin-top: -10px;
+margin-top: -7px;
 
 }
 
 input[type=range].volume_slider::-webkit-slider-runnable-track { 
 background: #e6f2ab; /* color of volume seeking track */
-filter:drop-shadow(-0.5px 0.5px 0 black) drop-shadow(0 0.5px 0 black) drop-shadow(0 0.5px 0 black) drop-shadow(0 0.5px 0.5px black) drop-shadow(0 0.5px black) drop-shadow(0.5px 0.5px 0 black) drop-shadow(0.5px 0.5px 0 black);  /* outline of volume seeking track */ 
 }
 
 input[type=range].volume_slider::-webkit-slider-thumb {
-background-image: url(https://yokai.crd.co/assets/images/gallery29/02fd5db2.png?v=b4df531c);/* image of volume seeking square */
+background:#255f8f;/* image of volume seeking square */
 background-size: 20px;
 height: 20px; /* height of volume seeking square */
-width: 20px; 
+width: 12px; 
 margin-top: -8px;
 }
 
 
 .slider_container {  
-width: 15%;       /* width of volume seeker */
+width: 17%;       /* width of volume seeker */
 display: flex;
 justify-content: center;
 align-items: center;
