--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ overflow:auto;
     font-family: "spunch";
     text-decoration-line: underline;
     color: #255f8f;
-    
+    background: #b3eaf5;
   }
 
   section{
